--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "expo": "~53.0.8",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
     "nodemon": "^3.1.10",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-navigation": "^3.0.8",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.8.3"
   },
